--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.0.3",
     "prettier": "^2.0.2",
     "webpack": "^4.42.1",
